--- a/trivy-client/config/templates/private-image-scan-template.yaml
+++ b/trivy-client/config/templates/private-image-scan-template.yaml
@@ -4,6 +4,11 @@ metadata:
   name: private-image-scan-template
 spec:
   template:
+    #@ if data.values.scanner.pullSecret == None:
+    #@ elif len(data.values.scanner.pullSecret) > 0:
+    imagePullSecrets:
+      - name: #@ data.values.scanner.pullSecret
+    #@ end
     containers:
     - args:
       - process
@@ -27,10 +32,6 @@ spec:
       command:
       - /bin/bash
       env:
-      - name: SYFT_SCHEMA_VERSION
-        value: 3.3.2
-      - name: FAIL_ON_SYFT_SCHEMA_ERRORS
-        value: "True"
       - name: XDG_CACHE_HOME
         value: /.cache
       - name: DOCKER_CONFIG
@@ -48,9 +49,15 @@ spec:
       - mountPath: /workspace
         name: workspace
         readOnly: false
+      #@ if data.values.targetImagePullSecret != None and data.values.targetImagePullSecret != "":
+      - name: registry-cred
+        mountPath: /.docker
+        readOnly: true
+      #@ end
       - mountPath: /.cache
         name: cache
         readOnly: false
+    #@ if data.values.metadataStore != None and data.values.metadataStore.url != None and len(data.values.metadataStore.url) > 0:
     - args:
       - -c
       - |
@@ -94,6 +101,7 @@ spec:
       - mountPath: /.config
         name: insight-config
         readOnly: false
+    #@ end
     - args:
       - check
       - --policy
@@ -120,6 +128,15 @@ spec:
     volumes:
     - emptyDir: {}
       name: workspace
+    #@ if data.values.targetImagePullSecret != None and data.values.targetImagePullSecret != "":
+    - name: registry-cred
+      secret:
+        secretName: #@ data.values.targetImagePullSecret
+        items:
+          - key: .dockerconfigjson
+            path: config.json
+        optional: true
+    #@ end
     - emptyDir: {}
       name: insight-config
     - emptyDir: {}
