--- a/trivy-client/config/templates/public-source-scan-template.yaml
+++ b/trivy-client/config/templates/public-source-scan-template.yaml
@@ -4,6 +4,11 @@ metadata:
   name: public-source-scan-template
 spec:
   template:
+    #@ if data.values.scanner.pullSecret == None:
+    #@ elif len(data.values.scanner.pullSecret) > 0:
+    imagePullSecrets:
+      - name: #@ data.values.scanner.pullSecret
+    #@ end
     containers:
     - args:
       - process
