--- a/trivy-client/config/templates/blob-source-scan-template.yaml
+++ b/trivy-client/config/templates/blob-source-scan-template.yaml
@@ -1,3 +1,5 @@
+#@ load("@ytt:data","data")
+---
 apiVersion: scanning.apps.tanzu.vmware.com/v1beta1
 kind: ScanTemplate
 metadata:
@@ -23,8 +25,6 @@ spec:
       - mountPath: /workspace
         name: workspace
         readOnly: true
-    imagePullSecrets:
-    - name: scanner-secret-ref
     initContainers:
     - args:
       - -c
